--- a/ChatComSocket/Chat/Chat.vcxproj
+++ b/ChatComSocket/Chat/Chat.vcxproj
@@ -24,7 +24,7 @@
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <Keyword>ManagedCProj</Keyword>
     <RootNamespace>Chat</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.15063.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -135,6 +135,7 @@
   <ItemGroup>
     <ClCompile Include="Controller.cpp" />
     <ClCompile Include="MainForm.cpp" />
+    <ClCompile Include="Transmissor.cpp" />
     <ClCompile Include="UserMessage.cpp" />
     <ClCompile Include="Util.cpp" />
   </ItemGroup>
@@ -143,6 +144,7 @@
     <ClInclude Include="MainForm.h">
       <FileType>CppForm</FileType>
     </ClInclude>
+    <ClInclude Include="Transmissor.h" />
     <ClInclude Include="UserMessage.h" />
     <ClInclude Include="Util.h" />
   </ItemGroup>
